comments/lista02_20241023211741.txt
g++ (Debian 12.2.0-14) 12.2.0
Copyright (C) 2022 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

ex4.cpp: In function ‘int main()’:
ex4.cpp:66:20: error: no matching function for call to ‘Polinomio2::Polinomio2(int)’
   66 |     Polinomio2 p1(1);
      |                    ^
ex4.cpp:27:5: note: candidate: ‘Polinomio2::Polinomio2()’
   27 |     Polinomio2()
      |     ^~~~~~~~~~
ex4.cpp:27:5: note:   candidate expects 0 arguments, 1 provided
ex4.cpp:12:5: note: candidate: ‘Polinomio2::Polinomio2(int, int, int)’
   12 |     Polinomio2(int a, int b, int c)
      |     ^~~~~~~~~~
ex4.cpp:12:5: note:   candidate expects 3 arguments, 1 provided
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(const Polinomio2&)’
    6 | class Polinomio2
      |       ^~~~~~~~~~
ex4.cpp:6:7: note:   no known conversion for argument 1 from ‘int’ to ‘const Polinomio2&’
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(Polinomio2&&)’
ex4.cpp:6:7: note:   no known conversion for argument 1 from ‘int’ to ‘Polinomio2&&’
ex4.cpp:71:22: error: no matching function for call to ‘Polinomio2::Polinomio2(int, int)’
   71 |     Polinomio2 p2(1,1);
      |                      ^
ex4.cpp:27:5: note: candidate: ‘Polinomio2::Polinomio2()’
   27 |     Polinomio2()
      |     ^~~~~~~~~~
ex4.cpp:27:5: note:   candidate expects 0 arguments, 2 provided
ex4.cpp:12:5: note: candidate: ‘Polinomio2::Polinomio2(int, int, int)’
   12 |     Polinomio2(int a, int b, int c)
      |     ^~~~~~~~~~
ex4.cpp:12:5: note:   candidate expects 3 arguments, 2 provided
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(const Polinomio2&)’
    6 | class Polinomio2
      |       ^~~~~~~~~~
ex4.cpp:6:7: note:   candidate expects 1 argument, 2 provided
ex4.cpp:6:7: note: candidate: ‘constexpr Polinomio2::Polinomio2(Polinomio2&&)’
ex4.cpp:6:7: note:   candidate expects 1 argument, 2 provided
Versão do G++:
Varificando data de envio...
AGORA: 2024-10-23 18:18:26.202787-03:00
PRAZO MÁXIMO: 2024-11-06 23:59:59-03:06
Testando sua solucao...
Procurando exercício 1...
Exercício 1...
Compilando...
g++ -O2 -Wno-unused-result  "ex1.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.050
Teste 12: correto! +0.050
Teste 13: correto! +0.050
Teste 14: correto! +0.050
Teste 15: correto! +0.050
Teste 16: correto! +0.050
Teste 17: correto! +0.050
Teste 18: correto! +0.050
Teste 19: correto! +0.050
Teste 20: correto! +0.050
Nota exercicio 1: 1.0
Procurando exercício 2...
Exercício 2...
Compilando...
g++ -O2 -Wno-unused-result  "ex2.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.050
Teste 12: correto! +0.050
Teste 13: correto! +0.050
Teste 14: correto! +0.050
Teste 15: correto! +0.050
Teste 16: correto! +0.050
Teste 17: correto! +0.050
Teste 18: correto! +0.050
Teste 19: correto! +0.050
Teste 20: correto! +0.050
Nota exercicio 2: 1.0
Procurando exercício 3...
Exercício 3...
Compilando...
g++ -O2 -Wno-unused-result  "ex3.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.050
Teste 12: correto! +0.050
Teste 13: correto! +0.050
Teste 14: correto! +0.050
Teste 15: correto! +0.050
Teste 16: correto! +0.050
Teste 17: correto! +0.050
Teste 18: correto! +0.050
Teste 19: correto! +0.050
Teste 20: correto! +0.050
Nota exercicio 3: 1.0
Procurando exercício 4...
Exercício 4...
Compilando...
g++ -O2 -Wno-unused-result  "ex4.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.051
Teste 12: correto! +0.050
ERRO: Erro de Compilação
Nota exercicio 4: 0.0
Nota exercicio 4: 0.0
Procurando exercício 5...
Exercício 5...
Compilando...
g++ -O2 -Wno-unused-result  "ex5.cpp" 
Teste 1: correto! +0.050
Teste 2: correto! +0.050
Teste 3: correto! +0.050
Teste 4: correto! +0.050
Teste 5: correto! +0.050
Teste 6: correto! +0.050
Teste 7: correto! +0.050
Teste 8: correto! +0.050
Teste 9: correto! +0.050
Teste 10: correto! +0.050
Teste 11: correto! +0.050
Teste 12: correto! +0.050
Teste 13: correto! +0.050
Teste 14: correto! +0.050
Teste 15: correto! +0.050
Teste 16: correto! +0.050
Teste 17: correto! +0.050
Teste 18: correto! +0.050
Teste 19: correto! +0.050
Teste 20: correto! +0.050
Nota exercicio 5: 1.0
Procurando exercício 6...
Procurando exercício 7...
Procurando exercício 8...
Nota total: 4.00
{"scores": {"ex1": 1.0, "ex2": 1.0, "ex3": 1.0, "ex4": 0.0, "ex5": 1.0, "ex6": 0.0, "ex7": 0.0, "ex8": 0.0}}
